<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="2dp"
    android:layout_gravity="center" >
    <TextView
	android:id="@+id/red_text"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/red"
	android:textSize="25dp" />
    <SeekBar xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/red_seekbar"
	android:layout_width="250dp"
	android:layout_height="wrap_content"
	android:layout_marginTop="10dp" />
    <TextView
	android:id="@+id/green_text"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/green"
	android:textSize="25dp" />
    <SeekBar xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/green_seekbar"
	android:layout_width="250dp"
	android:layout_height="wrap_content"
	android:layout_marginTop="10dp" />
    <TextView
	android:id="@+id/blue_text"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/blue"
	android:textSize="25dp" />
    <SeekBar xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/blue_seekbar"
	android:layout_width="250dp"
	android:layout_height="wrap_content"
	android:layout_marginTop="10dp" />
           <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:weightSum="1"
                android:layout_margin="10dp">
		<Button
		    android:id ="@+id/lcd_ok_button"
		    android:text="@string/ok"
        	    android:layout_alignParentRight="true"
		    android:layout_height="wrap_content"
		    android:layout_width="wrap_content" />

            </RelativeLayout>

</LinearLayout>
