<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.meticulus.codinalteparts.app.MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/linearLayout">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/imageView"
                    android:src="@drawable/avatar"
                    android:padding="5dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/development_name"
                        android:id="@+id/textView"
                        android:padding="5dp"
                        android:textSize="15dp"
                        android:gravity="center_vertical|center_horizontal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/extras_section_name"
                        android:id="@+id/textView2"
                        android:textStyle="bold|italic"
                        android:gravity="center_vertical|center_horizontal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/sponsor_thank_you"
                        android:id="@+id/textView3"
                        android:padding="5dp"
                        android:textStyle="italic"
                        android:gravity="center_vertical|center_horizontal"
                        android:textSize="10dp"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
		android:background="#CCCCCC" />

            <TextView
                style="@android:style/TextAppearance.DeviceDefault.WindowTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/kernel_header"
                android:id="@+id/kernel_textview"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:textStyle="bold"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
		android:textColor="#999999"
                android:textSize="10dp" />
 
	    <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:weightSum="1"
                android:id="@+id/dt2w_layout"
                android:layout_margin="10dp">

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dt2w_title"
                    android:id="@+id/switch_dt2w"
                    android:paddingBottom="20dp"
                    android:checked="false"
                    android:enabled="true"
                    android:paddingLeft="20dp"
                    android:paddingRight="0dp"
                    android:focusableInTouchMode="false"
                    android:layout_weight="0.99"
                    android:paddingTop="20dp"
                    android:textSize="12dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/whatis_dt2w"
                    android:src="@android:drawable/ic_menu_info_details"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:baselineAlignBottom="false" />
            </LinearLayout>

	    <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:weightSum="1"
                android:id="@+id/glove_layout"
                android:layout_margin="10dp">

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/glove_title"
                    android:id="@+id/switch_glove"
                    android:paddingBottom="20dp"
                    android:checked="false"
                    android:enabled="true"
                    android:paddingLeft="20dp"
                    android:paddingRight="0dp"
                    android:focusableInTouchMode="false"
                    android:layout_weight="0.99"
                    android:paddingTop="20dp"
                    android:textSize="12dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/whatis_glove"
                    android:src="@android:drawable/ic_menu_info_details"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:baselineAlignBottom="false" />
            </LinearLayout>

	    <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:weightSum="1"
                android:id="@+id/otg_layout"
                android:layout_margin="10dp">

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/otg_title"
                    android:id="@+id/switch_otg"
                    android:paddingBottom="20dp"
                    android:checked="false"
                    android:enabled="true"
                    android:paddingLeft="20dp"
                    android:paddingRight="0dp"
                    android:focusableInTouchMode="false"
                    android:layout_weight="0.99"
                    android:paddingTop="20dp"
                    android:textSize="12dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/whatis_otg"
                    android:src="@android:drawable/ic_menu_info_details"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:baselineAlignBottom="false" />
            </LinearLayout>
	    <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:weightSum="1"
                android:id="@+id/sensorex_layout"
                android:layout_margin="10dp">

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensorex_title"
                    android:id="@+id/switch_sensorex"
                    android:paddingBottom="20dp"
                    android:checked="false"
                    android:enabled="true"
                    android:paddingLeft="20dp"
                    android:paddingRight="0dp"
                    android:focusableInTouchMode="false"
                    android:layout_weight="0.99"
                    android:paddingTop="20dp"
                    android:textSize="12dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/whatis_sensorex"
                    android:src="@android:drawable/ic_menu_info_details"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:baselineAlignBottom="false" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
		android:background="#CCCCCC" />
 
            <TextView
                style="@android:style/TextAppearance.DialogWindowTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/network_header"
                android:id="@+id/network_textview"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:textStyle="bold"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
		android:textColor="#999999" 
                android:textSize="10dp" />
	    <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:weightSum="1"
                android:id="@+id/sim2_layout"
                android:layout_margin="10dp">

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sim2_title"
                    android:id="@+id/switch_sim2"
                    android:paddingBottom="20dp"
                    android:checked="false"
                    android:enabled="true"
                    android:paddingLeft="20dp"
                    android:paddingRight="0dp"
                    android:focusableInTouchMode="false"
                    android:layout_weight="0.99"
                    android:paddingTop="20dp" 
                    android:textSize="12dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/whatis_sim2"
                    android:src="@android:drawable/ic_menu_info_details"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:baselineAlignBottom="false" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
               android:background="#CCCCCC" />

            <TextView
                style="@android:style/TextAppearance.DialogWindowTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/workaround_header"
                android:id="@+id/workaround_textview"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:textStyle="bold"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
               android:textColor="#999999" 
                android:textSize="10dp" />
           <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:weightSum="1"
                android:id="@+id/google_enc_layout"
                android:layout_margin="10dp">

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/google_enc_title"
                    android:id="@+id/switch_google_enc"
                    android:paddingBottom="20dp"
                    android:checked="false"
                    android:enabled="true"
                    android:paddingLeft="20dp"
                    android:paddingRight="0dp"
                    android:focusableInTouchMode="false"
                    android:layout_weight="0.99"
                    android:paddingTop="20dp"
                    android:textSize="12dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/whatis_google_enc"
                    android:src="@android:drawable/ic_menu_info_details"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:baselineAlignBottom="false" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
