<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.meticulus.codinalteparts.app.MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/linearLayout">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/imageView"
                    android:src="@drawable/avatar"
                    android:padding="5dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/development_name"
                        android:id="@+id/textView"
                        android:padding="5dp"
                        android:textSize="15dp"
                        android:gravity="center_vertical|center_horizontal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/led_section_name"
                        android:id="@+id/textView2"
                        android:textStyle="bold|italic"
                        android:gravity="center_vertical|center_horizontal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/sponsor_thank_you"
                        android:id="@+id/textView3"
                        android:padding="5dp"
                        android:textStyle="italic"
                        android:gravity="center_vertical|center_horizontal"
                        android:textSize="10dp"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
		android:background="@color/card_background_grey" />

           <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:weightSum="1"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/led_lowpower_title"
                    android:id="@+id/text_led_lowpower"
                    android:paddingBottom="20dp"
                    android:enabled="true"
                    android:paddingLeft="20dp"
                    android:paddingRight="70dp"
                    android:focusableInTouchMode="false"
                    android:layout_weight="0.99"
                    android:paddingTop="20dp"
                    android:textSize="12dp" />

		<LinearLayout
		    android:orientation="horizontal"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
		    android:background="#ffcccccc" > 
		<LinearLayout
                    android:id="@+id/led_lowpower_layout"
		    android:orientation="horizontal"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_margin="2dp"
		    android:background="#ff000000" />
		</LinearLayout> 

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/whatis_led_lowpower"
                    android:src="@android:drawable/ic_menu_info_details"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:baselineAlignBottom="false" />
            </LinearLayout>
           <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:weightSum="1"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/led_charging_title"
                    android:id="@+id/text_led_charging"
                    android:paddingBottom="20dp"
                    android:enabled="true"
                    android:paddingLeft="20dp"
                    android:paddingRight="0dp"
                    android:focusableInTouchMode="false"
                    android:layout_weight="0.99"
                    android:paddingTop="20dp"
                    android:textSize="12dp" />

		<LinearLayout
		    android:orientation="horizontal"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
		    android:background="#ffcccccc" > 
		<LinearLayout
                    android:id="@+id/led_charging_layout"
		    android:orientation="horizontal"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_margin="2dp" />
		</LinearLayout> 

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/whatis_led_charging"
                    android:src="@android:drawable/ic_menu_info_details"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:baselineAlignBottom="false" />
            </LinearLayout>
           <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:weightSum="1"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/led_fullpower_title"
                    android:id="@+id/text_led_fullpower"
                    android:paddingBottom="20dp"
                    android:enabled="true"
                    android:paddingLeft="20dp"
                    android:paddingRight="0dp"
                    android:focusableInTouchMode="false"
                    android:layout_weight="0.99"
                    android:paddingTop="20dp"
                    android:textSize="12dp" />

		<LinearLayout
		    android:orientation="horizontal"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
		    android:background="#ffcccccc" > 
		<LinearLayout
                    android:id="@+id/led_fullpower_layout"
		    android:orientation="horizontal"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_margin="2dp" /> 
		</LinearLayout> 

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/whatis_led_fullpower"
                    android:src="@android:drawable/ic_menu_info_details"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:baselineAlignBottom="false" />
            </LinearLayout>
           <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:weightSum="1"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/led_noti_title"
                    android:id="@+id/text_led_noti"
                    android:paddingBottom="20dp"
                    android:enabled="true"
                    android:paddingLeft="20dp"
                    android:paddingRight="0dp"
                    android:focusableInTouchMode="false"
                    android:layout_weight="0.99"
                    android:paddingTop="20dp"
                    android:textSize="12dp" />

		<LinearLayout
		    android:orientation="horizontal"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
		    android:background="#ffcccccc" > 
		<LinearLayout
                    android:id="@+id/led_noti_layout"
		    android:orientation="horizontal"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_margin="2dp" />  
		</LinearLayout> 

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/whatis_led_noti"
                    android:src="@android:drawable/ic_menu_info_details"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:baselineAlignBottom="false" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>

